--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 nav {
    display: flex;
+   width: 100vw;
+   justify-content: space-between;
+   aling-items: center;
+   height: 50px;
 }
 
 .nav__logo,
 .nav__botao {
     width: 35px;
     height: 35px;
+    margin: 5px;
     background-color: black;
 }
